test/bad/13-02-statyczne-typowanie-funkcji-rekurencyjnych.gg
fun fib(n: Int) -> Int {
    if n <= 1
        then n
        else fib(Unit)
}

Unit